--- a/ext/glm/CMakeLists.txt
+++ b/ext/glm/CMakeLists.txt
@@ -1,15 +1,6 @@
-
 option(GLM_QUIET "No CMake Message" ON)
 option(GLM_TEST_ENABLE "Build unit tests" OFF)
 add_subdirectory(glm)
-
-add_library(inviwo::glm ALIAS glm)
-target_compile_definitions(glm INTERFACE
-    GLM_FORCE_SIZE_T_LENGTH
-    GLM_ENABLE_EXPERIMENTAL
-    GLM_FORCE_UNRESTRICTED_GENTYPE
-    GLM_FORCE_SILENT_WARNINGS
-)
 
 if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
     # Needed when using clang since GLM fails to detect c++11/14 support
@@ -23,3 +14,4 @@ endif()
 if(TARGET glm_shared)
     ivw_folder(glm_shared ext)
 endif()
+ivw_register_package(glm glm)
