--- a/modules/cimg/CMakeLists.txt
+++ b/modules/cimg/CMakeLists.txt
@@ -83,35 +83,42 @@ ivw_register_license_file(NAME tiff TARGET TIFF::TIFF MODULE CImg
 # The current OpenEXR has some problems with regards to packaging. So for now we make it optional.
 # When the packaging is fixed this option should be removed.
 option(IVW_USE_OPENEXR  "Add OpenEXR image format support (HDR images) " ON)
+option(IVW_USE_EXTERNAL_OPENEXR  "OpenEXR is provided externaly" OFF)
+
 if(IVW_USE_OPENEXR)
-    add_subdirectory(ext/openexr)
-    
-    ivw_register_license_file(NAME "OpenEXR" TARGET OpenEXR::IlmImf MODULE CImg
-        URL "http://www.openexr.com"
-        TYPE "Modified BSD License"
-        FILES ext/openexr/openexr/LICENSE.md
-    )
-    target_link_libraries(inviwo-module-cimg 
-        PRIVATE
-            IlmBase::Half
-            IlmBase::Iex
-            IlmBase::IexMath
-            IlmBase::Imath
-            IlmBase::IlmThread
-            OpenEXR::IlmImf
-            OpenEXR::IlmImfUtil
-    )
-    target_include_directories(inviwo-module-cimg PRIVATE 
-        ${CMAKE_CURRENT_BINARY_DIR}/ext/openexr/openexr/IlmBase/config
-        ${CMAKE_CURRENT_SOURCE_DIR}/ext/openexr/openexr/IlmBase/Half
-        ${CMAKE_CURRENT_SOURCE_DIR}/ext/openexr/openexr/IlmBase/Iex
-        ${CMAKE_CURRENT_SOURCE_DIR}/ext/openexr/openexr/IlmBase/IexMath
-        ${CMAKE_CURRENT_SOURCE_DIR}/ext/openexr/openexr/IlmBase/Imath
-        ${CMAKE_CURRENT_SOURCE_DIR}/ext/openexr/openexr/IlmBase/IlmThread
-        ${CMAKE_CURRENT_BINARY_DIR}/ext/openexr/openexr/OpenEXR/config
-        ${CMAKE_CURRENT_SOURCE_DIR}/ext/openexr/openexr/OpenEXR/IlmImf
-        ${CMAKE_CURRENT_SOURCE_DIR}/ext/openexr/openexr/OpenEXR/IlmImfUtil
-    )
+    if(IVW_USE_EXTERNAL_OPENEXR)
+        find_package(OpenEXR REQUIRED)
+        target_link_libraries(inviwo-module-cimg PRIVATE ${OpenEXR_LIBRARIES})
+        target_include_directories(inviwo-module-cimg PRIVATE ${OpenEXR_INCLUDE_DIRS})
+    else()
+        add_subdirectory(ext/openexr)
+        ivw_register_license_file(NAME "OpenEXR" TARGET OpenEXR::IlmImf MODULE CImg
+            URL "http://www.openexr.com"
+            TYPE "Modified BSD License"
+            FILES ext/openexr/openexr/LICENSE.md
+        )
+        target_link_libraries(inviwo-module-cimg
+            PRIVATE
+                IlmBase::Half
+                IlmBase::Iex
+                IlmBase::IexMath
+                IlmBase::Imath
+                IlmBase::IlmThread
+                OpenEXR::IlmImf
+                OpenEXR::IlmImfUtil
+        )
+        target_include_directories(inviwo-module-cimg PRIVATE 
+            ${CMAKE_CURRENT_BINARY_DIR}/ext/openexr/openexr/IlmBase/config
+            ${CMAKE_CURRENT_SOURCE_DIR}/ext/openexr/openexr/IlmBase/Half
+            ${CMAKE_CURRENT_SOURCE_DIR}/ext/openexr/openexr/IlmBase/Iex
+            ${CMAKE_CURRENT_SOURCE_DIR}/ext/openexr/openexr/IlmBase/IexMath
+            ${CMAKE_CURRENT_SOURCE_DIR}/ext/openexr/openexr/IlmBase/Imath
+            ${CMAKE_CURRENT_SOURCE_DIR}/ext/openexr/openexr/IlmBase/IlmThread
+            ${CMAKE_CURRENT_BINARY_DIR}/ext/openexr/openexr/OpenEXR/config
+            ${CMAKE_CURRENT_SOURCE_DIR}/ext/openexr/openexr/OpenEXR/IlmImf
+            ${CMAKE_CURRENT_SOURCE_DIR}/ext/openexr/openexr/OpenEXR/IlmImfUtil
+        )
+    endif()
     target_compile_definitions(inviwo-module-cimg PRIVATE cimg_use_openexr)
 endif()
 
