--- a/modules/fontrendering/CMakeLists.txt
+++ b/modules/fontrendering/CMakeLists.txt
@@ -1,10 +1,7 @@
-add_subdirectory(ext/freetype)
-
 #--------------------------------------------------------------------
 # Inviwo FontRendering Module
 ivw_module(FontRendering)
 
-#--------------------------------------------------------------------
 # Add header files
 set(HEADER_FILES
     include/modules/fontrendering/datastructures/fontdata.h
@@ -21,7 +18,6 @@ set(HEADER_FILES
 )
 ivw_group("Header Files" ${HEADER_FILES})
 
-#--------------------------------------------------------------------
 # Add source files
 set(SOURCE_FILES
     src/datastructures/fontdata.cpp
@@ -37,7 +33,6 @@ set(SOURCE_FILES
 )
 ivw_group("Source Files" ${SOURCE_FILES})
 
-#--------------------------------------------------------------------
 # Add shaders
 set(SHADER_FILES
     ${CMAKE_CURRENT_SOURCE_DIR}/glsl/fontrendering_freetype.frag
@@ -47,28 +42,36 @@ set(SHADER_FILES
 )
 ivw_group("Shader Files" ${SHADER_FILES})
 
-#--------------------------------------------------------------------
 # Create module
 ivw_create_module(${SOURCE_FILES} ${HEADER_FILES} ${SHADER_FILES})
 
-#--------------------------------------------------------------------
 # Package or build shaders into resources
 ivw_handle_shader_resources(${CMAKE_CURRENT_SOURCE_DIR}/glsl ${SHADER_FILES})
 
-#--------------------------------------------------------------------
 # Add font directory to pack
 ivw_add_to_module_pack(${CMAKE_CURRENT_SOURCE_DIR}/fonts)
 
-#--------------------------------------------------------------------
-# register license files
+option(IVW_USE_EXTERNAL_FREETYPE "Freetype is provided externaly" OFF)
+if(NOT IVW_USE_EXTERNAL_FREETYPE)
+    add_subdirectory(ext/freetype)
+    set(copyright "${CMAKE_CURRENT_SOURCE_DIR}/ext/freetype/freetype/docs/FTL.TXT")
+else()
+    find_package(freetype REQUIRED)
+    ivw_vcpkg_install(freetype COPYRIGHT copyright)
+endif()
+
 ivw_register_license_file(NAME FreeType MODULE FontRendering
     URL "https://www.freetype.org/"
     TYPE "BSD-style, acknowledgement: Portions of this software are copyright The FreeType Project (www.freetype.org). All rights reserved."
-    FILES ${CMAKE_CURRENT_SOURCE_DIR}/ext/freetype/freetype/docs/FTL.TXT
+    FILES ${copyright}
 )
 
-#--------------------------------------------------------------------
-# Add dependency to ext/utf 
-target_link_libraries(inviwo-module-fontrendering PRIVATE utf8::cpp)
-target_link_libraries(inviwo-module-fontrendering PUBLIC freetype)
+find_package(utfcpp REQUIRED)
+target_link_libraries(inviwo-module-fontrendering 
+    PUBLIC 
+        freetype
+    PRIVATE
+        utf8::cpp # Add dependency to ext/utf
+)
+
 ivw_make_package(InviwoFontRenderingModule inviwo-module-fontrendering)
