--- a/modules/eigenutils/CMakeLists.txt
+++ b/modules/eigenutils/CMakeLists.txt
@@ -1,9 +1,6 @@
-#--------------------------------------------------------------------
 # Inviwo EigenUtils Module
 ivw_module(EigenUtils)
 
-#--------------------------------------------------------------------
-# Add header files
 set(HEADER_FILES
     include/modules/eigenutils/eigenports.h
     include/modules/eigenutils/eigenutils.h
@@ -16,8 +13,6 @@ set(HEADER_FILES
 )
 ivw_group("Header Files" ${HEADER_FILES})
 
-#--------------------------------------------------------------------
-# Add source files
 set(SOURCE_FILES
     src/eigenutilsmodule.cpp
     src/processors/eigenmatrixtoimage.cpp
@@ -27,8 +22,6 @@ set(SOURCE_FILES
 )
 ivw_group("Source Files" ${SOURCE_FILES})
 
-
-#--------------------------------------------------------------------
 # Create module
 ivw_create_module(NO_PCH ${SOURCE_FILES} ${HEADER_FILES} ${SHADER_FILES})
 
@@ -47,24 +40,16 @@ if(NOT IVW_USE_EXTERNAL_EIGEN)
 
     # Creates VS folder structure
     ivw_folder(eigen_dummy ext)
-    set(copyright 
-        ${CMAKE_CURRENT_SOURCE_DIR}/ext/eigen/COPYING.README
-        ${CMAKE_CURRENT_SOURCE_DIR}/ext/eigen/COPYING.MPL2
-    )
-    set(version 3.3.90)
+    ivw_register_license_file(NAME Eigen VERSION 3.3.90 MODULE EigenUtils
+        URL http://eigen.tuxfamily.org/
+        TYPE "Mozilla Public License Version 2.0"
+        FILES ${CMAKE_CURRENT_SOURCE_DIR}/ext/eigen/COPYING.README
+              ${CMAKE_CURRENT_SOURCE_DIR}/ext/eigen/COPYING.MPL2
+    ) 
 else()
     find_package(Eigen3 REQUIRED)
     target_link_libraries(inviwo-module-eigenutils PUBLIC Eigen3::Eigen)
-    ivw_vcpkg_install(eigen3 COPYRIGHT copyright)
-    set(version ${EIGEN3_VERSION_STRING})
+    ivw_vcpkg_install(eigen3 MODULE EigenUtils)
 endif()
 
-ivw_register_license_file(NAME Eigen VERSION ${version} MODULE EigenUtils
-    URL http://eigen.tuxfamily.org/
-    TYPE "Mozilla Public License Version 2.0"
-    FILES ${copyright}
-) 
-
 ivw_make_package(InviwoEigenUtilsModule inviwo-module-eigenutils)
-
-
