--- a/tests/testutil/CMakeLists.txt
+++ b/tests/testutil/CMakeLists.txt
@@ -31,4 +31,4 @@ target_link_libraries(inviwo-testutil PUBLIC
 ivw_define_standard_properties(inviwo-testutil)
 ivw_define_standard_definitions(inviwo-testutil inviwo-testutil)
 
-ivw_default_install_comp_targets(core inviwo-testutil)
+ivw_default_install_targets(inviwo-testutil)
